--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="app_name">DuoApp</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
@@ -10,7 +11,7 @@
     <string name="historial_busquda">Historial de busquedas</string>
     <string name="configuracion_name">Mi perfil</string>
     <string name="my_perfil">Mi perfil</string>
-    <string name="title_activity_inicio"></string>
+    <string name="title_activity_inicio"> </string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -116,6 +117,7 @@
     <string name="btn_aceptar">ACEPTAR</string>
     <string name="user_name">User name:</string>
     <string name="user_email">Email</string>
-
-
+    <string name="no_publicacion_home">No hay publicaciones para mostrar</string>
+    <string name="descripcion_boton">Escribir aqui.....</string>
+    <string name="tres_puntos">...</string>
 </resources>
